exports[`test should add an item based on the inputValue in the Redux state when the addItem action is dispatched 1`] = `
Object {
  "inputValue": "",
  "items": Array [
    Object {
      "checked": true,
      "text": "Get to Las Palmas 🌴",
    },
    Object {
      "checked": false,
      "text": "Learn the basics of React 👩‍🎓",
    },
    Object {
      "checked": false,
      "text": "Go surfing 🏄",
    },
    Object {
      "checked": false,
      "text": "New item",
    },
  ],
}
`;

exports[`test should check an item based on its text when the checkItem action is dispatched 1`] = `
Object {
  "inputValue": "",
  "items": Array [
    Object {
      "checked": true,
      "text": "Get to Las Palmas 🌴",
    },
    Object {
      "checked": true,
      "text": "Learn the basics of React 👩‍🎓",
    },
    Object {
      "checked": false,
      "text": "Go surfing 🏄",
    },
  ],
}
`;

exports[`test should edit the inputValue in the state when the editInput action is dispatched 1`] = `
Object {
  "inputValue": "New input value",
  "items": Array [
    Object {
      "checked": true,
      "text": "Get to Las Palmas 🌴",
    },
    Object {
      "checked": false,
      "text": "Learn the basics of React 👩‍🎓",
    },
    Object {
      "checked": false,
      "text": "Go surfing 🏄",
    },
  ],
}
`;

exports[`test should return the initial state when called without a state 1`] = `
Object {
  "inputValue": "",
  "items": Array [
    Object {
      "checked": true,
      "text": "Get to Las Palmas 🌴",
    },
    Object {
      "checked": false,
      "text": "Learn the basics of React 👩‍🎓",
    },
    Object {
      "checked": false,
      "text": "Go surfing 🏄",
    },
  ],
}
`;

exports[`test should return the state when no action is passed 1`] = `
Object {
  "inputValue": "Something",
  "items": Array [],
}
`;
